analyze program using simulator .lst file to check words found and also doing rudimentary stemming

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,11 @@ spell.generated.lst
 test.js
 asdfg.generated.json.js
 diff
+Words/civilization.txt.match
+Words/civilization.txt.match.sorted
+Words/keto.txt
+asdfg-words.generated.lst
+asdfg.generated.lst
+civilization.txt.freq
+test.pl
+
